# ls_ill

./: BRIEF_INSTRUCTIONS  INSTRUCTIONS  LICENCE  Readme.md  nuance.m  poly2sym.m  polyint.m  reduce.m
+DLS/: contin2.m  dcoeffvalues.m  filterout.m
+DLS/@Experiment/: Experiment.m
+DLS/@Point/: Point.m  contin2.m  fit_discrete.m  fit_discrete_raw.m
+DLS/@Sample/: Sample.m  find_start_end.m
+Instruments/: compile_fast_read_functions.m  compile_fast_reading_functions.m  get_datetime_format.m
+Instruments/@ALV/: ALV.m  find_start_end.m  generate_filename.m  invoke_read_dynamic_file_fast.m  read_dynamic_file.m  read_dynamic_file_fast.c  read_dynamic_file_fast.mexglx  read_dynamic_file_fast.mexmaci  read_static.m  read_static_file.m  read_static_from_autosave.m  read_static_from_autosave_fast.c  read_static_from_autosave_fast.mexglx  read_static_from_autosave_fast.mexmaci  read_tol_file.m
+Instruments/@ALVBASE/: .invoke_read_dynamic_file_fast.m.swp  .read_static.m.swp  .read_static_file.m.swp  ALVBASE.m  invoke_read_dynamic_file_fast.m  read_dynamic_file.m  read_dynamic_file_fast.c  read_dynamic_file_fast.mexmaci  read_static.m  read_static_file.m  read_static_from_autosave.m  read_static_from_autosave_fast.c  read_static_from_autosave_fast.mexglx  read_tol_file.m
+Instruments/@ALVTUE/: .read_dynamic_file_fast_init.m.swp  ALVTUE.m  attach_index_to_path.m  find_start_end.m  generate_filename.m  invoke_read_dynamic_file_fast.m  read_dynamic_file.m  read_dynamic_file_fast.c  read_dynamic_file_fast.mexglx  read_dynamic_file_fast.mexmaci  read_static.m  read_static_file.m  read_static_from_autosave.m  read_static_from_autosave_fast.c  read_static_from_autosave_fast.mexglx  read_static_from_autosave_fast.mexmaci
+LIT/@BSA/: BSA.m
+LIT/@Buffers/: Buffers.m
+LIT/@Models/: Models.m
+Models/@B2/: B2.m
+Models/@S0/: S0.m
+Models/@StokesEinstein/: StokesEinstein.m
+SLS/: B2_Donnan.m  X_Tf.m  convert_B2.m  errorbar.m  plot.m
+SLS/@AngleData/: AngleData.m
+SLS/@Experiment/: Experiment.m
+SLS/@Point/: Point.m
+SLS/@Sample/: Sample.m  (+1 more)
@Args/: Args.m
@Constants/: Constants.m
@DLS/: DLS.m  contin.mexa64  fit_discrete.m  invert_laplace.m
@Data/: Data.m  find_instrument.m  find_runs.m  find_runs_ALV.m  find_runs_Malvern.m  load_general_data.m  load_static_data_ALV.m  load_static_data_Malvern.m  read_dyn_files.m  read_dyn_files_ALV.m  read_dyn_files_Malvern.m  read_general_file_ALV.m  read_general_file_Malvern.m  read_static_file.m  read_static_file_ALV.m  read_static_file_Malvern.m  set_general_parameters_Malvern.m
@Graphics/: Graphics.m
@Index_Refraction/: Index_Refraction.m
@LIT/: LIT.m
@SLS/: SLS.m
@Utils/: Utils.m
@Viscosity/: Viscosity.m
Chemistry/: ion_binding.m
Contin/: compile_contin.m  contin.c  contin.c~  contin.mexa64  contin.mexmaci  test_contin.m
Contin/ool-0.2.0/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libool.la  libtool  ool_version.h  ool_version.h.in  version.c
Contin/ool-0.2.0/.deps/: version.Plo
Contin/ool-0.2.0/.libs/: libool.la  libool.lai  libool.so.1
Contin/ool-0.2.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
Contin/ool-0.2.0/conmin/: Makefile  Makefile.am  Makefile.in  TODO  conmin.c  conmin.lo  conmin_tools.c  conmin_tools.h  conmin_tools.lo  conmin_vector.c  conmin_vector.h  conmin_vector.lo  ool_conmin.h  ool_conmin_common.h  ool_conmin_defs.h  ool_conmin_tests.h
Contin/ool-0.2.0/conmin/.deps/: conmin.Plo  conmin_tools.Plo  conmin_vector.Plo
Contin/ool-0.2.0/conmin/.libs/: liboolconmin.la
Contin/ool-0.2.0/doc/: Makefile  Makefile.am  Makefile.in  TODO  armijo.eps  armijo.txt  conmin.texi  fdl.texi  freemanuals.texi  gencan.texi  intro.texi  ool-ref.info  ool-ref.texi  pgrad.texi  quickstart.texi  spg.texi  texinfo.tex  theory.texi  tools.texi  usage.texi  version-ref.texi
Contin/ool-0.2.0/gencan/: Makefile  Makefile.am  Makefile.in  TODO  gencan.c  gencan.h  gencan.lo  gencan_cg.c  gencan_cg.lo  gencan_iterate.c  gencan_iterate.lo  gencan_spgls.c  gencan_spgls.lo  gencan_tnls.c  gencan_tnls.lo  gencan_tools.c  gencan_tools.lo  liboolgencan.la  ool_conmin_gencan.h  test_gencan.c
Contin/ool-0.2.0/gencan/.deps/: gencan.Plo  gencan_cg.Plo  gencan_iterate.Plo  gencan_spgls.Plo  gencan_tnls.Plo  gencan_tools.Plo
Contin/ool-0.2.0/gencan/.libs/: liboolgencan.la
Contin/ool-0.2.0/ool/: Makefile  Makefile.am  Makefile.in  conmin_tools.h  conmin_vector.h  gencan.h  ool_conmin.h  ool_conmin_common.h  ool_conmin_defs.h  ool_conmin_gencan.h  ool_conmin_pgrad.h  ool_conmin_spg.h  ool_conmin_tests.h  ool_tools_diff.h  ool_version.h  pgrad.h  spg.h
Contin/ool-0.2.0/pgrad/: Makefile  Makefile.am  Makefile.in  TODO  liboolpgrad.la  ool_conmin_pgrad.h  pgrad.c  pgrad.h  pgrad.lo  test_pgrad.c
Contin/ool-0.2.0/pgrad/.deps/: pgrad.Plo
Contin/ool-0.2.0/pgrad/.libs/: liboolpgrad.la
Contin/ool-0.2.0/spg/: Makefile  Makefile.am  Makefile.in  liboolspg.la  ool_conmin_spg.h  spg.c  spg.h  spg.lo  test_spg.c
Contin/ool-0.2.0/spg/.deps/: spg.Plo
Contin/ool-0.2.0/spg/.libs/: liboolspg.la
Contin/ool-0.2.0/tools/: Makefile  Makefile.am  Makefile.in  TODO  libooltools.la  ool_tools_diff.h  test_tools.c  tools_diff.c  tools_diff.lo
Contin/ool-0.2.0/tools/.deps/: tools_diff.Plo
Contin/ool-0.2.0/tools/.libs/: libooltools.la
UV/: HSAUV_c.m  HSAdilution.m  HSAdilution_table.m  UV_c.m  c_dataset.m  dilution.m  dilution_table.m  err.m  pipetting_error.m  ploterr.m  script_UV.m
example/: example.m  example_script.m  export_data.m
other/: ExperimentData.m  ExperimentData.m~  read_data.m  reentrant_condensation.m  viscosityH2O.m
wiki/: ALVBASE.wiki  ALVTUE.wiki  DLS.Point.wiki  DLS.Sample.wiki  Fit-Methods.wiki  Instrument.wiki  SLS.AngleData.wiki  SLS.Point.wiki  SLS.Sample.wiki  index.wiki
wiki_html/: ALVBASE.html  ALVTUE.html  DLS.Point.html  DLS.Sample.html  Fit-Methods.html  Instrument.html  SLS.AngleData.html  SLS.Point.html  SLS.Sample.html  index.html
(+182 files in other folders)
