## Process this file with automake to produce Makefile.in
#------------------------------------------------------------------------------#
# conmin subdirectory
#
# Luis Alberto D'Afonseca
# since: Feb, 28, 2004
#------------------------------------------------------------------------------#

noinst_LTLIBRARIES = liboolconmin.la

liboolconmin_la_SOURCES = ool_conmin.h          \
                          ool_conmin_common.h   \
                          ool_conmin_defs.h     \
                          ool_conmin_tests.h    \
                          conmin_tools.h        \
                          conmin_vector.h       \
                          conmin.c              \
                          conmin_tools.c        \
                          conmin_vector.c

pkginclude_HEADERS = ool_conmin.h          \
                     ool_conmin_common.h   \
                     ool_conmin_defs.h     \
                     ool_conmin_tests.h

noinst_HEADERS = conmin_tools.h conmin_vector.h

CLEANFILES = *~

#------------------------------------------------------------------------------#