## Process this file with automake to produce Makefile.in
#------------------------------------------------------------------------------#
# doc subdirectory
#
# Luis Alberto D'Afonseca
# since: Feb, 28, 2004
#------------------------------------------------------------------------------#

info_TEXINFOS = ool-ref.texi

ool_ref_TEXINFOS = autoconf.texi    \
		   armijo.eps       \
		   armijo.txt       \
                   conmin.texi      \
                   err.texi         \
                   fdl.texi         \
                   freemanuals.texi \
                   gencan.texi      \
                   gpl.texi         \
                   intro.texi       \
		   pgrad.texi	    \
		   quickstart.texi  \
		   spg.texi         \
		   theory.texi      \
                   tools.texi       \
                   usage.texi       \
                   version-ref.texi

CLEANFILES = *~

#------------------------------------------------------------------------------#
